stylesheet/custom.css
/* need 50px height padding which equals to fixed navbar's height */
body {
  padding-top: 50px;
}

/* vh: relative number to viewport height */
.slide1, .slide2, .slide3, .slide4, .slide5 {
    height: 50vh;
    background-size: cover;
    background-position: center center;
}
.slide1 {
   background-image: url(/images/slide/gallery.png);
}
.slide2 {
    background-image: url(/images/slide/lncmi-1.png);
}
.slide3 {
    background-image: url(/images/slide/vivabrain-stream-2.png);
}
.slide4 {
    background-image: url(/images/slide/tgcc_curie.jpeg);
}
.slide5 {
    background-image: url(/images/slide/elm-pressure-movie_1400x1070_0170.png);
}

/* Carousel Fade Effect */
.carousel.carousel-fade .item {
    -webkit-transition: opacity 1s linear;
    -moz-transition: opacity 1s linear;
    -ms-transition: opacity 1s linear;
    -o-transition: opacity 1s linear;
    transition: opacity 1s linear;
    opacity: 0;
}
.carousel.carousel-fade .active.item {
    opacity: .2;
}
.carousel.carousel-fade .active.left,
.carousel.carousel-fade .active.right {
    left: 0;
    z-index: -1;
    opacity: 0.5;
    filter: alpha(opacity=0.5);
}
.carousel-overlay {
    position: absolute;
    z-index: 3;
    top: 10%;
    right: 0;
    left: 0;
    background: rbga(0.,0.,0.,0.5);
}

hr {
  margin: 0px;
}


.col-centered {
  float: none;
  margin: 0 auto;
}

#sitemap ul{
  list-style: none;
  display: block;
}

#panel-testimony {
  background-color: #eee;
  padding-top: 50px;
  padding-bottom: 50px;
}

#panel-access {
  padding-top: 50px;
}

#panel-diploma {
  padding-top: 50px;
  padding-bottom: 50px;
}

#panel-metiers {
  background-color: #eee;
  padding-top: 50px;
  padding-bottom: 50px;
}

#panel-course {
  padding-bottom: 50px;
}

#panel-partnership {
  background-color: #eee;
  padding-bottom: 50px;
  padding-top: 50px;
}

#panel-agenda {
  background-color: #eee;
  padding-top: 50px;
  padding-bottom: 50px;
}

#panel-international {
  padding-top: 50px;
  padding-bottom: 50px;
}

/* promotion panel */
#panel-odd-year {
  background-color: #eee;
}

/* back to top arrow  */
.back-to-top {
background: none;
margin: 0;
position: fixed;
bottom: 0;
right: 0;
width: 70px;
height: 70px;
z-index: 100;
display: none;
text-decoration: none;
}

.back-to-top i {
  font-size: 60px;
}

.anchor {
  display: block;
  height: 50px;
  margin-top: -50px;
  visibility: hidden;
}

.img-responsive {
  margin: 0 auto;
}

.navbar-default {
 border-bottom: 1px solid black;
}

.centered {
  text-align: center;
}

.footer {
 padding: 20px 0;
 margin-top: 40px;
 border-top: 1px solid #e5e5e5;
 background-color: #f5f5f5;
 width: 100%;
}
.footer p {
 margin-bottom: 0;
 color: #777;
}
.footer-links {
 text-align: center;
 list-style-type: none;
 margin-top: 10px;
 margin-bottom: -2px;
}
.footer-links li {
 display: inline-block;
 margin-right: 10px;
}

/* Testimonials
-------------------------------------------------- */
/* line 2009, ../../app/assets/stylesheets/layout.css.scss */
.twitter-testimonials {
  padding: 20px;
}
/* line 2011, ../../app/assets/stylesheets/layout.css.scss */
.twitter-testimonials img {
  margin-top: 10px;
}

/* line 2016, ../../app/assets/stylesheets/layout.css.scss */
.testimonial {
  margin: 0;
  margin-top: 15px;
  max-width: auto;
  padding: 10px 50px;
  position: relative;
  color: #666;
  border-radius: 5px;
  font-style: italic;
  border-left: none;
}

/* line 2028, ../../app/assets/stylesheets/layout.css.scss */
.testimonial:before, .testimonial:after {
  content: "\201C";
  position: absolute;
  font-size: 80px;
  line-height: 1;
  color: #999;
  font-style: normal;
}

/* line 2037, ../../app/assets/stylesheets/layout.css.scss */
.testimonial:before {
  top: 0;
  left: 5px;
}

/* line 2042, ../../app/assets/stylesheets/layout.css.scss */
.testimonial:after {
  content: "\201D";
  right: 10px;
  bottom: -0.5em;
}

/* line 2048, ../../app/assets/stylesheets/layout.css.scss */
.arrow-down {
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-top: 15px solid transparent;
  margin: 0 0 0 25px;
}

/* line 2057, ../../app/assets/stylesheets/layout.css.scss */
.testimonial-author {
  margin: 5 0 0 25px;
  width: auto;
  font-family: Arial, Helvetica, sans-serif;
  color: #999;
  text-align: center;
}

/* line 2065, ../../app/assets/stylesheets/layout.css.scss */
.testimonial-author span {
  font-size: 12px;
  color: #666;
}
/* line 2068, ../../app/assets/stylesheets/layout.css.scss */
​
blockquote {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  margin-bottom: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 20px;
}

/* line 112, ../../app/assets/stylesheets/layout.css.scss */
.article-highlight-thumbnails {
  text-align: center;
}

/* line 116, ../../app/assets/stylesheets/layout.css.scss */
.article-highlight-thumbnails > li {
  display: inline-block;
  *display: inline;
  float: none;
}

/* line 122, ../../app/assets/stylesheets/layout.css.scss */
.article-highlight-thumbnails .thumbnail {
  min-height: 350px;
  margin-bottom: 20px;
}

/* line 127, ../../app/assets/stylesheets/layout.css.scss */
.contact-thumb-li {
  min-width: 85px;
  max-width: 200px;
}

/* make the row element have the same height */
.row-fluid {
  overflow: hidden;
}

.marketing-title {
  text-align: center;
}
.vertical-align {
    display: flex;
    align-items: center;
}

/********************************/
/*          Media Queries       */
/********************************/
@media screen and (max-width: 992px){
  .slide1, .slide2, .slide3, .slide4, .slide5 {
    height: 100vh;
  }
}

@media screen and (max-width: 768px){
  .slide1, .slide2, .slide3, .slide4, .slide5 {
    height: 120vh;
  }
}

@media screen and (max-width: 480px){
  .slide1, .slide2, .slide3, .slide4, .slide5 {
    height: 160vh;
  }
}

@media screen and (min-width: 992px){
  .mobile-brand {
    display: none;
  }
}
@media screen and (max-width: 992px){
  .desktop-brand {
    display: none;
  }
}

